# UNIFY-PYTHON-SAMPLE-APP

./: .gitignore  DOCKER_HUB_SETUP.md  Dockerfile  NOTIFICATIONS_SETUP.md  README.md  app.py  pyproject.toml  requirements.txt  swagger.json  test_app.py
.cloudbees/: config.yaml  scanners.yaml
.cloudbees/workflows/: ci-cd-pipeline.yaml
