[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unify-python-sample-app"
version = "1.0.0"
description = "A sample Python Flask application with CI/CD pipeline for CloudBees Unify"
authors = [
    {name = "TEJAS DESAI", email = "tdesai@cloudbees.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "flake8==6.1.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
